feat: add ba colour variables

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,10 @@
 $desktop-breakpoint: 80rem;
 $desktop-max-width: 63.75rem;
+
+//colours
+$ba-blue: #075aaa;
+$ba-red: #eb2226;
+$black-blue: #01295c;
+$light-blue: #b9cfed;
+$alabaster: #efe9e5;
+$silver: #a7a9ac;
