--- a/src/pages/FeaturePage/FeaturePage.scss
+++ b/src/pages/FeaturePage/FeaturePage.scss
@@ -2,3 +2,22 @@
 @use "../../styles/partials/typography.scss";
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
+
+.feature {
+  background-color: #ececed;
+  height: 100vh;
+  padding: 3rem 6rem;
+
+  &__title {
+    padding-bottom: 2rem;
+  }
+
+  &__text {
+    padding-bottom: 3rem;
+  }
+
+  &__container {
+    display: flex;
+    gap: 8px;
+  }
+}
