--- a/src/components/SubmitEmailModal/Modal.css
+++ b/src/components/SubmitEmailModal/Modal.css
@@ -15,11 +15,15 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   width: 564px;
-  height: 340px; /* Adjust the width as needed */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .submitmodal__exit--container {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
 }
 .submitmodal__exit {
   background: none;
@@ -29,6 +33,8 @@
 .submitmodal__title {
   text-align: center;
   margin-bottom: 10px;
+  width: 484px;
+  height: 125px;
 }
 .submitmodal__body {
   margin-bottom: 20px;
@@ -41,6 +47,7 @@
   box-sizing: border-box;
   border: none;
   border-bottom: 1px solid rgb(2, 27, 65);
+  margin-top: 2rem;
 }
 /* Footer styles */
 .submitmodal__footer {
@@ -49,11 +56,13 @@
 }
 .submitmodal__submit {
   padding: 10px 20px;
-  background-color: #4caf50;
+  background-color: #2e5c99;
   color: #fff;
   border: none;
   cursor: pointer;
-  margin-left: 25rem;
+  margin-left: 25.7rem;
+  width: 97px;
+  height: 43px;
 }
 .submitmodal__cancel:hover,
 .submitmodal__submit:hover {
@@ -91,4 +100,19 @@
 .details__error {
   margin: 0;
   font-size: 14px;
+}
+
+.modal_title {
+  font-size: 25px;
+  color: #021b41;
+  text-align: left;
+  margin-bottom: 2rem;
+  font-weight: 600;
+}
+
+.modal_text {
+  font-size: 16px;
+  color: #021b41;
+  text-align: left;
+  margin-bottom: 2rem;
 }
