--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -13,11 +13,12 @@
   height: 348px;
 }
 .footer {
-  background-color: grey;
+  background-color: #ececed;
   width: 1280px;
   height: 146px;
   display: flex;
   flex-direction: column;
+  padding: 1rem 0;
 }
 
 .voucher {
@@ -27,4 +28,14 @@
   background-color: #2e5c99;
   border: none;
   color: white;
+}
+
+.content {
+  margin-left: 12rem;
+}
+
+.title {
+  font-size: 25px;
+  color: #021b41;
+  width: 758px;
 }
