--- a/src/components/SubmitEmailModal/Modal.css
+++ b/src/components/SubmitEmailModal/Modal.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 3rem;
 }
 .submitmodal__exit--container {
   display: flex;
@@ -29,6 +30,7 @@
   background: none;
   border: none;
   cursor: pointer;
+  margin-left: 30rem;
 }
 .submitmodal__title {
   text-align: center;
@@ -103,7 +105,7 @@
 }
 
 .modal_title {
-  font-size: 25px;
+  font-size: 30px;
   color: #021b41;
   text-align: left;
   margin-bottom: 2rem;
@@ -115,4 +117,9 @@
   color: #021b41;
   text-align: left;
   margin-bottom: 2rem;
+  font-weight: 600;
+}
+
+.submitmodal__title {
+  font-size: 30px;
 }
