hover button color change

--- a/src/components/SubmitEmailModal/Modal.css
+++ b/src/components/SubmitEmailModal/Modal.css
@@ -68,7 +68,7 @@
 }
 .submitmodal__cancel:hover,
 .submitmodal__submit:hover {
-  background-color: #45a049;
+  background-color: #2671d3;
 }
 /* Close button styles */
 .submitmodal__close {
